--- a/post.hbs
+++ b/post.hbs
@@ -152,7 +152,7 @@
 	      }
 	    });
 	  }
-	  codestyling();
+	  {{!-- codestyling(); --}}
 		// Reading progress bar on window top
 	  function readingProgress() {
 			var postBottom = post.offset().top + post.height();
